--- a/index.html
+++ b/index.html
@@ -1,163 +1,184 @@
-!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="pt-br">
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Roleta DStreet</title>
+  <title>DStreet Roleta Premiada</title>
+  <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap" rel="stylesheet">
   <style>
-    body {
+    * {
       margin: 0;
       padding: 0;
-      background: url('fundo-sacolas.jpg') no-repeat center center fixed;
-      background-size: cover;
-      font-family: 'Arial Black', sans-serif;
+      box-sizing: border-box;
+      font-family: 'Bebas Neue', cursive;
+    }
+    body {
+      background: url('https://i.imgur.com/mxib1ha.jpg') center/cover no-repeat;
+      color: white;
       text-align: center;
-      color: #fff;
+      overflow-x: hidden;
     }
-
+    header {
+      padding: 20px;
+    }
     .logo {
-      width: 140px;
-      margin-top: 20px;
+      width: 160px;
     }
-
-    .frase-impacto {
-      font-size: 28px;
-      margin: 20px 0 10px;
-      color: #FFD700;
-      text-shadow: 2px 2px 8px #000;
+    h1 {
+      font-size: 48px;
+      margin: 10px 0;
+      text-shadow: 2px 2px 8px black;
     }
-
-    .roleta-container {
+    .impact-text {
+      font-size: 30px;
+      color: #fff200;
+      text-shadow: 2px 2px 6px #000;
+      margin-bottom: 20px;
+    }
+    .wheel-container {
       position: relative;
-      width: 320px;
-      height: 320px;
-      margin: 20px auto;
+      margin: 40px auto;
+      width: 380px;
+      height: 380px;
     }
-
-    .roleta {
+    #wheel {
       width: 100%;
       height: 100%;
       border-radius: 50%;
-      border: 4px solid #fff;
-      box-shadow: 0 0 20px #fff;
-      transition: transform 5s cubic-bezier(0.33, 1, 0.68, 1);
+      border: 10px solid #ffd700;
+      box-shadow: 0 0 20px #fff200, 0 0 50px #fff200 inset;
+      transition: transform 5s ease-out;
     }
-
-    .ponteiro {
+    #pointer {
       position: absolute;
-      top: -25px;
+      top: -30px;
       left: 50%;
       transform: translateX(-50%);
-      width: 60px;
+      width: 0;
+      height: 0;
+      border-left: 20px solid transparent;
+      border-right: 20px solid transparent;
+      border-bottom: 40px solid red;
       z-index: 10;
     }
-
-    #girarBtn {
-      margin-top: 20px;
-      padding: 15px 40px;
-      font-size: 22px;
-      background: #00ffcc;
-      border: none;
-      color: #000;
-      border-radius: 12px;
-      box-shadow: 0 0 20px #00ffcc, 0 0 40px #00ffcc;
-      cursor: pointer;
-      font-weight: bold;
-    }
-
-    .resultado-texto {
+    .spin-button {
       margin-top: 30px;
-      font-size: 26px;
-      color: #FFD700;
-      font-weight: bold;
-      text-shadow: 2px 2px 6px #000;
+      background: #00ffea;
+      color: black;
+      font-size: 28px;
+      padding: 15px 40px;
+      border: none;
+      border-radius: 12px;
+      box-shadow: 0 0 20px #00ffff;
+      cursor: pointer;
+      transition: 0.3s;
     }
-
-    .regras {
-      font-size: 16px;
-      margin-top: 15px;
-      color: #fff;
+    .spin-button:hover {
+      box-shadow: 0 0 40px #00ffff, 0 0 10px #00ffff inset;
+    }
+    .result {
+      font-size: 36px;
+      margin-top: 25px;
+      color: #00ffea;
+      text-shadow: 2px 2px 8px black;
+    }
+    .bags-bg {
+      position: absolute;
+      top: 0;
+      left: 0;
+      z-index: -1;
+      opacity: 0.15;
+      width: 100%;
+      height: 100%;
     }
   </style>
 </head>
 <body>
+  <header>
+    <img src="https://i.imgur.com/Z9kXMsT.png" class="logo" alt="Logo DStreet" />
+    <h1>Roleta Premiada</h1>
+    <div class="impact-text">GIRE E LEVE PRA CASA ATÉ <span style="color: #ff3c00;">10 CAMISETAS EXCLUSIVAS</span>!</div>
+  </header>
 
-  <img src="logo.png" alt="DStreet Logo" class="logo"/>
-
-  <div class="frase-impacto">GIRE A ROLETA E LEVE <br>PARA CASA ATÉ <span style="color:#fff;">10 CAMISETAS!</span></div>
-
-  <div class="roleta-container">
-    <img src="ponteiro.png" class="ponteiro" />
-    <canvas id="roleta" width="320" height="320" class="roleta"></canvas>
+  <div class="wheel-container">
+    <img src="https://i.imgur.com/KJYnl2Z.png" alt="Seta" id="pointer" />
+    <canvas id="wheel"></canvas>
   </div>
 
-  <button id="girarBtn">GIRAR</button>
+  <button class="spin-button" onclick="spin()">GIRAR</button>
+  <div class="result" id="resultText"></div>
 
-  <div class="resultado-texto" id="resultado"></div>
-
-  <div class="regras">R$5 = 1 giro | R$10 = 3 giros | R$20 = 4 giros</div>
-
-  <audio id="somGiro" src="giro.mp3"></audio>
-  <audio id="somVitoria" src="vitoria.mp3"></audio>
-  <audio id="somPerda" src="perda.mp3"></audio>
+  <audio id="spinSound" src="https://www.myinstants.com/media/sounds/slot-machine-reel-spin.mp3"></audio>
+  <audio id="winSound" src="https://www.myinstants.com/media/sounds/win.mp3"></audio>
+  <audio id="loseSound" src="https://www.myinstants.com/media/sounds/aww.mp3"></audio>
 
   <script>
-    const canvas = document.getElementById('roleta');
+    const canvas = document.getElementById('wheel');
     const ctx = canvas.getContext('2d');
-    const resultado = document.getElementById('resultado');
-    const somGiro = document.getElementById('somGiro');
-    const somVitoria = document.getElementById('somVitoria');
-    const somPerda = document.getElementById('somPerda');
+    const size = 380;
+    canvas.width = size;
+    canvas.height = size;
 
-    const premios = ['TENTE NOVAMENTE', '10 CAMISETAS', 'TENTE NOVAMENTE', '5 CAMISETAS', 'TENTE NOVAMENTE', '3 CAMISETAS'];
-    const colors = ['#333', '#000', '#333', '#000', '#333', '#000'];
+    const segments = [
+      { label: "10 CAMISETAS", color: "#444" },
+      { label: "TENTE OUTRA VEZ", color: "#222" },
+      { label: "5 CAMISETAS", color: "#444" },
+      { label: "TENTE OUTRA VEZ", color: "#222" },
+      { label: "3 CAMISETAS", color: "#444" },
+      { label: "TENTE OUTRA VEZ", color: "#222" },
+    ];
 
-    function desenharRoleta() {
-      const anguloBase = 2 * Math.PI / premios.length;
-      for (let i = 0; i < premios.length; i++) {
+    const spinSound = document.getElementById('spinSound');
+    const winSound = document.getElementById('winSound');
+    const loseSound = document.getElementById('loseSound');
+    let angle = 0;
+    let spinning = false;
+
+    function drawWheel() {
+      const arcSize = (2 * Math.PI) / segments.length;
+      for (let i = 0; i < segments.length; i++) {
+        const segAngle = i * arcSize;
         ctx.beginPath();
-        ctx.fillStyle = colors[i];
-        ctx.moveTo(160, 160);
-        ctx.arc(160, 160, 160, anguloBase * i, anguloBase * (i + 1));
+        ctx.fillStyle = segments[i].color;
+        ctx.moveTo(size/2, size/2);
+        ctx.arc(size/2, size/2, size/2, segAngle, segAngle + arcSize);
         ctx.fill();
         ctx.save();
-        ctx.translate(160, 160);
-        ctx.rotate(anguloBase * (i + 0.5));
-        ctx.fillStyle = '#fff';
-        ctx.font = 'bold 14px Arial';
-        ctx.textAlign = 'right';
-        ctx.fillText(premios[i], 150, 5);
+        ctx.translate(size/2, size/2);
+        ctx.rotate(segAngle + arcSize / 2);
+        ctx.fillStyle = "white";
+        ctx.font = "bold 16px Bebas Neue";
+        ctx.fillText(segments[i].label, 60, 0);
         ctx.restore();
       }
     }
 
-    desenharRoleta();
+    function spin() {
+      if (spinning) return;
+      spinning = true;
+      document.getElementById('resultText').textContent = '';
+      spinSound.play();
+      const spins = Math.floor(Math.random() * 5) + 5;
+      const segDeg = 360 / segments.length;
+      const finalSegment = Math.floor(Math.random() * segments.length);
+      const finalDeg = 360 - (finalSegment * segDeg) - (segDeg / 2);
+      const totalDeg = (spins * 360) + finalDeg;
 
-    let anguloAtual = 0;
-
-    document.getElementById('girarBtn').addEventListener('click', () => {
-      somGiro.play();
-      const grausPorPremio = 360 / premios.length;
-      const sorteio = Math.floor(Math.random() * premios.length);
-      const giros = 5;
-      const anguloFinal = (360 * giros) + (sorteio * grausPorPremio) + grausPorPremio / 2;
-
-      anguloAtual += anguloFinal;
-
-      canvas.style.transform = `rotate(${anguloAtual}deg)`;
+      canvas.style.transform = `rotate(${totalDeg}deg)`;
 
       setTimeout(() => {
-        const premio = premios[sorteio];
-        resultado.innerText = premio;
-
-        if (premio.includes('CAMISETAS')) {
-          somVitoria.play();
+        const result = segments[finalSegment].label;
+        document.getElementById('resultText').textContent = result;
+        if (result.includes("CAMISETAS")) {
+          winSound.play();
         } else {
-          somPerda.play();
+          loseSound.play();
         }
-      }, 5200);
-    });
-  </script>
+        spinning = false;
+      }, 5000);
+    }
 
+    drawWheel();
+  </script>
 </body>
 </html>
