--- a/index.html
+++ b/index.html
@@ -16,7 +16,6 @@
       background: url('https://i.imgur.com/mxib1ha.jpg') center/cover no-repeat;
       color: white;
       text-align: center;
-      overflow-x: hidden;
     }
     header {
       padding: 20px;
@@ -51,9 +50,9 @@
     }
     #pointer {
       position: absolute;
-      top: -30px;
+      top: -40px;
       left: 50%;
-      transform: translateX(-50%);
+      transform: translateX(-50%) rotate(0deg);
       width: 0;
       height: 0;
       border-left: 20px solid transparent;
@@ -77,19 +76,10 @@
       box-shadow: 0 0 40px #00ffff, 0 0 10px #00ffff inset;
     }
     .result {
-      font-size: 36px;
-      margin-top: 25px;
+      font-size: 42px;
+      margin-top: 30px;
       color: #00ffea;
-      text-shadow: 2px 2px 8px black;
-    }
-    .bags-bg {
-      position: absolute;
-      top: 0;
-      left: 0;
-      z-index: -1;
-      opacity: 0.15;
-      width: 100%;
-      height: 100%;
+      text-shadow: 2px 2px 10px black;
     }
   </style>
 </head>
@@ -101,14 +91,14 @@
   </header>
 
   <div class="wheel-container">
-    <img src="https://i.imgur.com/KJYnl2Z.png" alt="Seta" id="pointer" />
+    <div id="pointer"></div>
     <canvas id="wheel"></canvas>
   </div>
 
   <button class="spin-button" onclick="spin()">GIRAR</button>
   <div class="result" id="resultText"></div>
 
-  <audio id="spinSound" src="https://www.myinstants.com/media/sounds/slot-machine-reel-spin.mp3"></audio>
+  <audio id="spinSound" src="https://www.myinstants.com/media/sounds/track.mp3"></audio>
   <audio id="winSound" src="https://www.myinstants.com/media/sounds/win.mp3"></audio>
   <audio id="loseSound" src="https://www.myinstants.com/media/sounds/aww.mp3"></audio>
 
@@ -158,7 +148,8 @@
       spinning = true;
       document.getElementById('resultText').textContent = '';
       spinSound.play();
-      const spins = Math.floor(Math.random() * 5) + 5;
+
+      const spins = Math.floor(Math.random() * 4) + 6;
       const segDeg = 360 / segments.length;
       const finalSegment = Math.floor(Math.random() * segments.length);
       const finalDeg = 360 - (finalSegment * segDeg) - (segDeg / 2);
@@ -182,3 +173,4 @@
   </script>
 </body>
 </html>
+
