--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+!DOCTYPE html>
 <html lang="pt-br">
 <head>
   <meta charset="UTF-8" />
@@ -16,6 +16,9 @@
       background: url('https://i.imgur.com/mxib1ha.jpg') center/cover no-repeat;
       color: white;
       text-align: center;
+      overflow-x: hidden;
+      position: relative;
+      min-height: 100vh;
     }
     header {
       padding: 20px;
@@ -50,14 +53,11 @@
     }
     #pointer {
       position: absolute;
-      top: -40px;
+      top: -45px;
       left: 50%;
-      transform: translateX(-50%) rotate(0deg);
-      width: 0;
-      height: 0;
-      border-left: 20px solid transparent;
-      border-right: 20px solid transparent;
-      border-bottom: 40px solid red;
+      transform: translateX(-50%);
+      width: 40px;
+      height: 40px;
       z-index: 10;
     }
     .spin-button {
@@ -76,10 +76,17 @@
       box-shadow: 0 0 40px #00ffff, 0 0 10px #00ffff inset;
     }
     .result {
-      font-size: 42px;
-      margin-top: 30px;
+      font-size: 36px;
+      margin-top: 40px;
       color: #00ffea;
-      text-shadow: 2px 2px 10px black;
+      text-shadow: 2px 2px 8px black;
+      position: absolute;
+      left: 50%;
+      top: 65%;
+      transform: translate(-50%, -50%);
+      background: rgba(0,0,0,0.6);
+      padding: 10px 20px;
+      border-radius: 10px;
     }
   </style>
 </head>
@@ -91,14 +98,14 @@
   </header>
 
   <div class="wheel-container">
-    <div id="pointer"></div>
+    <img src="https://i.imgur.com/KJYnl2Z.png" alt="Seta" id="pointer" />
     <canvas id="wheel"></canvas>
   </div>
 
   <button class="spin-button" onclick="spin()">GIRAR</button>
   <div class="result" id="resultText"></div>
 
-  <audio id="spinSound" src="https://www.myinstants.com/media/sounds/track.mp3"></audio>
+  <audio id="spinSound" src="https://assets.mixkit.co/sfx/preview/mixkit-slot-machine-wheel-1939.mp3"></audio>
   <audio id="winSound" src="https://www.myinstants.com/media/sounds/win.mp3"></audio>
   <audio id="loseSound" src="https://www.myinstants.com/media/sounds/aww.mp3"></audio>
 
@@ -147,19 +154,22 @@
       if (spinning) return;
       spinning = true;
       document.getElementById('resultText').textContent = '';
+      spinSound.currentTime = 0;
       spinSound.play();
 
-      const spins = Math.floor(Math.random() * 4) + 6;
+      const spins = Math.floor(Math.random() * 5) + 5;
       const segDeg = 360 / segments.length;
       const finalSegment = Math.floor(Math.random() * segments.length);
       const finalDeg = 360 - (finalSegment * segDeg) - (segDeg / 2);
       const totalDeg = (spins * 360) + finalDeg;
 
+      canvas.style.transition = 'transform 5s ease-out';
       canvas.style.transform = `rotate(${totalDeg}deg)`;
 
       setTimeout(() => {
         const result = segments[finalSegment].label;
         document.getElementById('resultText').textContent = result;
+        spinSound.pause();
         if (result.includes("CAMISETAS")) {
           winSound.play();
         } else {
@@ -173,4 +183,3 @@
   </script>
 </body>
 </html>
-
