--- a/index.html
+++ b/index.html
@@ -17,8 +17,6 @@
       color: white;
       text-align: center;
       overflow-x: hidden;
-      position: relative;
-      min-height: 100vh;
     }
     header {
       padding: 20px;
@@ -53,11 +51,14 @@
     }
     #pointer {
       position: absolute;
-      top: -45px;
+      top: -50px;
       left: 50%;
       transform: translateX(-50%);
-      width: 40px;
-      height: 40px;
+      width: 0;
+      height: 0;
+      border-left: 20px solid transparent;
+      border-right: 20px solid transparent;
+      border-bottom: 40px solid red;
       z-index: 10;
     }
     .spin-button {
@@ -80,13 +81,6 @@
       margin-top: 40px;
       color: #00ffea;
       text-shadow: 2px 2px 8px black;
-      position: absolute;
-      left: 50%;
-      top: 65%;
-      transform: translate(-50%, -50%);
-      background: rgba(0,0,0,0.6);
-      padding: 10px 20px;
-      border-radius: 10px;
     }
   </style>
 </head>
@@ -98,14 +92,15 @@
   </header>
 
   <div class="wheel-container">
-    <img src="https://i.imgur.com/KJYnl2Z.png" alt="Seta" id="pointer" />
+    <div id="pointer"></div>
     <canvas id="wheel"></canvas>
   </div>
 
   <button class="spin-button" onclick="spin()">GIRAR</button>
   <div class="result" id="resultText"></div>
 
-  <audio id="spinSound" src="https://assets.mixkit.co/sfx/preview/mixkit-slot-machine-wheel-1939.mp3"></audio>
+  <!-- Sons -->
+  <audio id="spinSound" src="https://cdn.pixabay.com/download/audio/2022/03/15/audio_d324f5ef56.mp3"></audio>
   <audio id="winSound" src="https://www.myinstants.com/media/sounds/win.mp3"></audio>
   <audio id="loseSound" src="https://www.myinstants.com/media/sounds/aww.mp3"></audio>
 
@@ -128,8 +123,9 @@
     const spinSound = document.getElementById('spinSound');
     const winSound = document.getElementById('winSound');
     const loseSound = document.getElementById('loseSound');
-    let angle = 0;
+
     let spinning = false;
+    let currentRotation = 0;
 
     function drawWheel() {
       const arcSize = (2 * Math.PI) / segments.length;
@@ -154,22 +150,22 @@
       if (spinning) return;
       spinning = true;
       document.getElementById('resultText').textContent = '';
-      spinSound.currentTime = 0;
       spinSound.play();
 
-      const spins = Math.floor(Math.random() * 5) + 5;
+      const spins = Math.floor(Math.random() * 3) + 4;
       const segDeg = 360 / segments.length;
       const finalSegment = Math.floor(Math.random() * segments.length);
-      const finalDeg = 360 - (finalSegment * segDeg) - (segDeg / 2);
-      const totalDeg = (spins * 360) + finalDeg;
+      const stopAngle = finalSegment * segDeg + (segDeg / 2);
 
-      canvas.style.transition = 'transform 5s ease-out';
-      canvas.style.transform = `rotate(${totalDeg}deg)`;
+      const totalRotation = (spins * 360) + (360 - stopAngle);
+      currentRotation += totalRotation;
+
+      canvas.style.transition = "transform 5s ease-out";
+      canvas.style.transform = `rotate(${currentRotation}deg)`;
 
       setTimeout(() => {
         const result = segments[finalSegment].label;
         document.getElementById('resultText').textContent = result;
-        spinSound.pause();
         if (result.includes("CAMISETAS")) {
           winSound.play();
         } else {
